@@ -75,7 +75,7 @@
       <dictionary>
         <item>
             <key> <string>text</string> </key>
-            <value> <string>string:${object_url}/DocumentComponent_view</string> </value>
+            <value> <string>string:${object_url}/Component_view</string> </value>
         </item>
       </dictionary>
     </pickle>
