@@ -1,3 +1,6 @@
+2012-01-23 arnaud.fontaine
+* Rename DocumentComponent to Component.
+
 2012-01-19 arnaud.fontaine
 * Extension Component has now its own class (meaningful for importing from filesystem).
 
